[report] test(GetMonthlyReportE2ETest): 월 길이 버킷팅 케이스들 추가